fix: safari overflow

--- a/app/static/css/dashboard.css
+++ b/app/static/css/dashboard.css
@@ -126,6 +126,7 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s, box-shadow 0.2s;
     text-decoration: none;
+    overflow: hidden;
     text-overflow: ellipsis;
     color: var(--text-color);
 
